antlr/calc/Calc.g4
// Calc.g4
grammar Calc;

// Tokens
MUL: '*';
DIV: '/';
ADD: '+';
SUB: '-';
NUMBER: ('+'|'-')?[0-9]+('.'[0-9]+)?;
WHITESPACE: [ \r\n\t]+ -> skip;

// Rules
start : expression EOF;

expression
   : expression op=(MUL|DIV) expression # MulDiv
   | expression op=(ADD|SUB) expression # AddSub
   | NUMBER                             # Number
   | '(' expression ')'                 # Parens
   ;
